--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -40,8 +40,8 @@ body {
 
   .summary {
     position: absolute;
-    bottom: -108px;
-    right: 31px;
+    top: 45%;
+    left: 10%;
     width: 300px;
     height: 300px;
     @include big-dipper;
@@ -69,10 +69,10 @@ body {
 
   .preamble {
     position: absolute;
-    bottom: -108px;
-    right: 31px;
-    width: 300px;
-    height: 300px;
+    top: 9%;
+    right: -2%;
+    width: 275px;
+    height: 275px;
     @include planet-earth;
     background-size: contain;
     overflow: visible;
@@ -107,12 +107,13 @@ body {
   display: flex;
 
   .explanation{
+    //So What is this About?
     position: absolute;
-    bottom: 30%;
+    bottom: 32%;
     left: 1%;
-    width: 300px;
-    height: 300px;
-    @include spaceship;
+    width: 175px;
+    height: 175px;
+    @include planet-purple;
     background-size: contain;
     overflow: visible;
     font-size: 12px;
@@ -122,6 +123,7 @@ body {
     align-items: center;
 
     p {padding: 5px;
+      padding-top: 700px;
       opacity: 0;
       height: 0;
       background-color:rgba(0,0,0,0.5);
@@ -137,10 +139,10 @@ body {
 
   .participation{
     position: absolute;
-    bottom: 60%;
-    left: 54%;
-    width: 300px;
-    height: 300px;
+    bottom: 35%;
+    left: 38%;
+    width: 250px;
+    height: 250px;
     @include planet-yellow;
     background-size: contain;
     overflow: visible;
@@ -166,11 +168,11 @@ body {
 
   .benefits{
     position: absolute;
-    bottom: 16%;
-    left: 23%;
-    width: 300px;
+    bottom: -5%;
+    left: 38%;
+    width: 500px;
     height: 300px;
-    @include planet-purple;
+    @include spaceship;
     background-size: contain;
     overflow: visible;
     font-size: 12px;
@@ -178,6 +180,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transform: rotate(10deg);
+
+    h3{
+      color: red;
+    }
 
     p {padding: 5px;
       opacity: 0;
@@ -195,10 +202,10 @@ body {
 
   .requirements{
     position: absolute;
-    bottom: 27%;
-    right: 10%;
-    width: 300px;
-    height: 300px;
+    bottom: 61%;
+    right: 16%;
+    width: 375px;
+    height: 375px;
     @include planet-blue;
     background-size: contain;
     overflow: visible;
@@ -225,12 +232,12 @@ body {
 
   footer{
     position: absolute;
-    top: 87%;
-    right: 29%;
-    width: 300px;
-    height: 300px;
+    top: 85%;
+    right: 72%;
+    width: 468px;
+    height: 150px;
     @include planet-orange;
-    background-size: contain;
+  //  background-size: contain;
     overflow: hidden;
     font-size: 12px;
     display: flex;
