updated fonts, changed footer color, shifted some elements.

--- a/zen-garden/zen-garden2/scss/partials/_variables.scss
+++ b/zen-garden/zen-garden2/scss/partials/_variables.scss
@@ -12,7 +12,7 @@ $main-bg: white;
 
 // Typography
 $all-text: 'Nunito Sans', sans-serif;
-$titles: 'Permanent Marker';
+$titles: 'Rock Salt';
 
 $hover-color: coral;
 
