--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -40,8 +40,8 @@ body {
 
   .summary {
     position: absolute;
-    top: 45%;
-    left: 10%;
+    top: 86%;
+    left: 11%;
     width: 300px;
     height: 300px;
     @include big-dipper;
@@ -63,6 +63,7 @@ body {
       p {
        opacity: 1;
        height: auto;
+       transition: all 1s;
       }
     }
   }
@@ -167,12 +168,11 @@ body {
 
   .benefits{
     position: absolute;
-    bottom: -5%;
-    left: 42%;
+    bottom: 2%;
+    left: 52%;
     width: 500px;
     height: 300px;
     @include spaceship;
-    background-size: contain;
     overflow: hidden;
     font-size: 12px;
     display: flex;
@@ -233,10 +233,10 @@ body {
 
   footer{
     position: absolute;
-    top: 85%;
-    right: 68%;
-    width: 497px;
-    height: 259px;
+    top: 76%;
+    right: 67%;
+    width: 500px;
+    height: 225px;
     @include planet-orange;
     overflow: hidden;
     font-size: 30px;
@@ -271,7 +271,7 @@ body {
     background-color: rgba(255,255,2555,.5);
     margin-bottom: 9px;
     padding: 6px;
-    height: 40px;
+    height: 30px;
     transition: .5s;
     &:hover{
        transform: translateX(-20px);
