--- a/zen-garden/zen-garden2/scss/partials/_typography.scss
+++ b/zen-garden/zen-garden2/scss/partials/_typography.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Nanum+Brush+Script|Nanum+Myeongjo|Nunito+Sans|Permanent+Marker');
+@import url('https://fonts.googleapis.com/css?family=Rock+Salt');
 
 @import 'variables';
 
@@ -33,15 +34,16 @@ h1{
 
 h2{
   font-family: $all-text;
-  margin: 5px;
-  padding: 30px;
+  margin: 15px;
+  padding: 0;
   color: $header-color;
   font-size: $header2-size;
+  font-kerning: auto;
 }
 
 h3{
-  margin: 5px;
-  padding: 2px;
+  margin: 2px;
+  padding: 0;
   font-family: $titles;
   font-size: 1rem;
   text-align: left;
