--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -63,7 +63,7 @@ body {
       p {
        opacity: 1;
        height: auto;
-       transition: all 1s;
+       transition: all .5s linear;
       }
     }
   }
@@ -93,6 +93,7 @@ body {
       p {
        opacity: 1;
        height: auto;
+       transition: all .5s linear;
       }
     }
 
@@ -133,6 +134,7 @@ body {
       p {
        opacity: 1;
        height: auto;
+       transition: all .5s linear;
       }
     }
   }
@@ -162,6 +164,7 @@ body {
       p {
        opacity: 1;
        height: auto;
+       transition: all .5s linear;
       }
     }
   }
@@ -197,6 +200,7 @@ body {
       p {
        opacity: 1;
        height: auto;
+       transition: all .5s linear;
       }
     }
   }
@@ -226,7 +230,8 @@ body {
       p {
        opacity: 1;
        height: auto;
-       transform:  translateX(20px);
+       transform:  translateX(-20px);
+       transition: all .5s linear;
       }
     }
   }
@@ -236,7 +241,7 @@ body {
     top: 76%;
     right: 67%;
     width: 500px;
-    height: 225px;
+    height: 251px;
     @include planet-orange;
     overflow: hidden;
     font-size: 30px;
@@ -255,6 +260,7 @@ body {
       font-size: 40px;
     	color: #f5a562;
       transform: scale(1);
+      transition: all .5s linear;
     	}
 
   }
@@ -272,7 +278,7 @@ body {
     margin-bottom: 9px;
     padding: 6px;
     height: 30px;
-    transition: .5s;
+    transition: all .5s linear;
     &:hover{
        transform: translateX(-20px);
      }
