--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -1,311 +1,516 @@
 html,
 body {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .page-wrapper {
-  display: grid;
-  grid-template-columns: repeat(12, 8.3333% ) ;
-  grid-template-rows: repeat(7, 14.28%  );
-  margin: 0;
-  padding: 0;
-  position: relative;
-  width: 100%;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .intro {
-  grid-column: 1 / 6;
-  grid-row: 1 / 3;
-  overflow: visible;
-  position: relative;
-
-
-  &::before {
-    content: '';
-    @include sun;
-    position: absolute;
-    background-size: contain;
-    width: 563px;
-    height: 602px;
-    top: -248px;
-    left: -222px;
-  }
-
-  header {
+    overflow: visible;
     position: relative;
-    padding: 10px;
-  }
 
-  .summary {
-    position: absolute;
-    top: 86%;
-    left: 11%;
-    width: 300px;
-    height: 300px;
-    @include big-dipper;
-    background-size: contain;
-    overflow: visible;
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
-    p {padding: 5px;
-      opacity: 0;
-      height: 0;
-      background-color:rgba(0,0,0,0.5);
+    &::before {
+        content: '';
+        @include sun;
+        position: absolute;
+        background-size: contain;
+        width: 100%;
+        height: 100%;
+        top: -50%;
+        left: -50%;
     }
 
-    &:hover {
-      p {
-       opacity: 1;
-       height: auto;
-       transition: all .5s linear;
-      }
-    }
-  }
-
-  .preamble {
-    position: absolute;
-    top: 9%;
-    right: -2%;
-    width: 275px;
-    height: 275px;
-    @include planet-earth;
-    background-size: contain;
-    overflow: visible;
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    p {padding: 5px;
-      opacity: 0;
-      height: 0;
-      background-color:rgba(0,0,0,0.5);
+    header {
+        position: relative;
+        padding: 10px;
     }
 
-    &:hover {
-      p {
-       opacity: 1;
-       height: auto;
-       transition: all .5s linear;
-      }
+    .summary {
+        width: auto;
+        @include big-dipper;
+        background-size: contain;
+        overflow: visible;
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
-  }
+    .preamble {
+        width: auto;
+        @include planet-earth;
+        background-size: contain;
+        overflow: visible;
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        p {
+            padding: 5px;
+            opacity: 0;
+            height: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        &:hover {
+            p {
+                opacity: 1;
+                height: auto;
+                transition: all .5s linear;
+            }
+        }
+
+    }
 }
-
-
 
 .main {
-  grid-column: 1 / 11;
-  grid-row: 1 / 9;
 
-  display: flex;
-
-  .explanation{
-    //So What is this About?
-    position: absolute;
-    bottom: 32%;
-    left: 1%;
-    width: 175px;
-    height: 175px;
-    @include planet-purple;
-    background-size: contain;
-    overflow: visible;
-    font-size: 12px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 
-    p {padding: 5px;
-      opacity: 0;
-      height: 0;
-      background-color:rgba(0,0,0,0.5);
+    .explanation {
+        //So What is this About?
+        width: auto;
+        height: auto;
+        @include planet-purple;
+        background-size: contain;
+        overflow: visible;
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        p {
+            padding: 5px;
+            opacity: 0;
+            height: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        &:hover {
+            p {
+                opacity: 1;
+                height: auto;
+                transition: all .5s linear;
+            }
+        }
     }
 
-    &:hover {
-      p {
-       opacity: 1;
-       height: auto;
-       transition: all .5s linear;
-      }
-    }
-  }
+    .participation {
+        @include planet-yellow;
+        background-size: contain;
+        overflow: visible;
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-  .participation{
-    position: absolute;
-    bottom: 35%;
-    left: 38%;
-    width: 250px;
-    height: 250px;
-    @include planet-yellow;
-    background-size: contain;
-    overflow: visible;
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+        p {
+            padding: 5px;
+            opacity: 0;
+            height: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
 
-    p {padding: 5px;
-      opacity: 0;
-      height: 0;
-      background-color:rgba(0,0,0,0.5);
+        &:hover {
+            p {
+                opacity: 1;
+                height: auto;
+                transition: all .5s linear;
+            }
+        }
     }
 
-    &:hover {
-      p {
-       opacity: 1;
-       height: auto;
-       transition: all .5s linear;
-      }
-    }
-  }
+    .benefits {
+        @include spaceship;
+        overflow: hidden;
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transform: rotate(10deg);
 
-  .benefits{
-    position: absolute;
-    bottom: 2%;
-    left: 52%;
-    width: 500px;
-    height: 300px;
-    @include spaceship;
-    overflow: hidden;
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transform: rotate(10deg);
+        h3 {
+            margin: 2px 0;
+            color: red;
+        }
 
-    h3{
-      margin: 2px 0;
-      color: red;
-    }
+        p {
+            margin: 0;
+            opacity: 0;
+            height: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
 
-    p {
-      margin: 0;
-      opacity: 0;
-      height: 0;
-      background-color:rgba(0,0,0,0.5);
+        &:hover {
+            p {
+                opacity: 1;
+                height: auto;
+                transition: all .5s linear;
+            }
+        }
     }
 
-    &:hover {
-      p {
-       opacity: 1;
-       height: auto;
-       transition: all .5s linear;
-      }
-    }
-  }
+    .requirements {
+        @include planet-blue;
+        background-size: contain;
+        overflow: visible;
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-  .requirements{
-    position: absolute;
-    bottom: 50%;
-    right: 16%;
-    width: 375px;
-    height: 375px;
-    @include planet-blue;
-    background-size: contain;
-    overflow: visible;
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+        p {
+            padding: 5px;
+            opacity: 0;
+            height: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
 
-    p {padding: 5px;
-      opacity: 0;
-      height: 0;
-      background-color:rgba(0,0,0,0.5);
+        &:hover {
+            p {
+                opacity: 1;
+                height: auto;
+                transform: translateX(-20px);
+                transition: all .5s linear;
+            }
+        }
     }
 
-    &:hover {
-      p {
-       opacity: 1;
-       height: auto;
-       transform:  translateX(-20px);
-       transition: all .5s linear;
-      }
+    footer {
+        position:absolute;
+        bottom:0;
+        left:0;
+        width: 100%;
+        @include planet-orange;
+        overflow: hidden;
+        font-size: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        a {
+            padding: 5px;
+            color: white;
+            font-size: 20px;
+        }
+
+        a:hover,
+        a:focus,
+        a:active {
+            text-decoration: none;
+            font-size: 40px;
+            color: #f5a562;
+            transform: scale(1);
+            transition: all .5s linear;
+        }
+
     }
-  }
-
-  footer{
-    position: absolute;
-    top: 76%;
-    right: 67%;
-    width: 500px;
-    height: 251px;
-    @include planet-orange;
-    overflow: hidden;
-    font-size: 30px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    a{
-      padding: 5px;
-      color: white;
-      font-size: 20px;
-    }
-    a:hover, a:focus, a:active {
-      text-decoration: none;
-      font-size: 40px;
-    	color: #f5a562;
-      transform: scale(1);
-      transition: all .5s linear;
-    	}
-
-  }
 }
 
-.sidebar {
-  grid-column: 11 / 13;
-  grid-row: 1 / 8;
-  font-size: 14px;
-  overflow: visible;
+    @include breakpoint(medium) {
+        .page-wrapper {
+            display: grid;
+            grid-template-columns: repeat(12, 8.3333%);
+            grid-template-rows: repeat(7, 14.28%);
+        }
 
-  li {
-    list-style-type: none;
-    background-color: rgba(255,255,2555,.5);
-    margin-bottom: 9px;
-    padding: 6px;
-    height: 30px;
-    transition: all .5s linear;
-    &:hover{
-       transform: translateX(-20px);
-     }
-
-  }
-}
-
-//
-// /* ********************************
-// ***** Mobile Layout ***************
-// ********************************* */
+        .intro {
+            grid-column: 1 / 6;
+            grid-row: 1 / 3;
+            overflow: visible;
+            position: relative;
 
 
+            &::before {
+                content: '';
+                @include sun;
+                position: absolute;
+                background-size: contain;
+                width: 563px;
+                height: 602px;
+                top: -248px;
+                left: -222px;
+            }
 
-// //Alien insertion
-// .design-name {
-//     @include alien1;
-// }
-// .design-archives {
-//     @include alien2;
-// }
-// .zen-resources {
-//     @include alien3;
-// }
-// .next {
-//     @include alien4;
-// }
-// .designer-name {
-//     @include alien5;
-// }
+            header {
+                position: relative;
+                padding: 10px;
+            }
+
+            .summary {
+                position: absolute;
+                top: 86%;
+                left: 11%;
+                width: 300px;
+                height: 300px;
+                @include big-dipper;
+                background-size: contain;
+                overflow: visible;
+                font-size: 12px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                p {
+                    padding: 5px;
+                    opacity: 0;
+                    height: 0;
+                    background-color: rgba(0, 0, 0, 0.5);
+                }
+
+                &:hover {
+                    p {
+                        opacity: 1;
+                        height: auto;
+                        transition: all .5s linear;
+                    }
+                }
+            }
+
+            .preamble {
+                position: absolute;
+                top: 9%;
+                right: -2%;
+                width: 275px;
+                height: 275px;
+                @include planet-earth;
+                background-size: contain;
+                overflow: visible;
+                font-size: 12px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                p {
+                    padding: 5px;
+                    opacity: 0;
+                    height: 0;
+                    background-color: rgba(0, 0, 0, 0.5);
+                }
+
+                &:hover {
+                    p {
+                        opacity: 1;
+                        height: auto;
+                        transition: all .5s linear;
+                    }
+                }
+
+            }
+        }
+
+
+
+        .main {
+            grid-column: 1 / 11;
+            grid-row: 1 / 9;
+
+            display: flex;
+
+            .explanation {
+                //So What is this About?
+                position: absolute;
+                bottom: 32%;
+                left: 1%;
+                width: 175px;
+                height: 175px;
+                @include planet-purple;
+                background-size: contain;
+                overflow: visible;
+                font-size: 12px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                p {
+                    padding: 5px;
+                    opacity: 0;
+                    height: 0;
+                    background-color: rgba(0, 0, 0, 0.5);
+                }
+
+                &:hover {
+                    p {
+                        opacity: 1;
+                        height: auto;
+                        transition: all .5s linear;
+                    }
+                }
+            }
+
+            .participation {
+                position: absolute;
+                bottom: 35%;
+                left: 38%;
+                width: 250px;
+                height: 250px;
+                @include planet-yellow;
+                background-size: contain;
+                overflow: visible;
+                font-size: 12px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                p {
+                    padding: 5px;
+                    opacity: 0;
+                    height: 0;
+                    background-color: rgba(0, 0, 0, 0.5);
+                }
+
+                &:hover {
+                    p {
+                        opacity: 1;
+                        height: auto;
+                        transition: all .5s linear;
+                    }
+                }
+            }
+
+            .benefits {
+                position: absolute;
+                bottom: 2%;
+                left: 52%;
+                width: 500px;
+                height: 300px;
+                @include spaceship;
+                overflow: hidden;
+                font-size: 12px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                transform: rotate(10deg);
+
+                h3 {
+                    margin: 2px 0;
+                    color: red;
+                }
+
+                p {
+                    margin: 0;
+                    opacity: 0;
+                    height: 0;
+                    background-color: rgba(0, 0, 0, 0.5);
+                }
+
+                &:hover {
+                    p {
+                        opacity: 1;
+                        height: auto;
+                        transition: all .5s linear;
+                    }
+                }
+            }
+
+            .requirements {
+                position: absolute;
+                bottom: 50%;
+                right: 16%;
+                width: 375px;
+                height: 375px;
+                @include planet-blue;
+                background-size: contain;
+                overflow: visible;
+                font-size: 12px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                p {
+                    padding: 5px;
+                    opacity: 0;
+                    height: 0;
+                    background-color: rgba(0, 0, 0, 0.5);
+                }
+
+                &:hover {
+                    p {
+                        opacity: 1;
+                        height: auto;
+                        transform: translateX(-20px);
+                        transition: all .5s linear;
+                    }
+                }
+            }
+
+            footer {
+                position: absolute;
+                top: 76%;
+                right: 67%;
+                width: 500px;
+                height: 251px;
+                @include planet-orange;
+                overflow: hidden;
+                font-size: 30px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+
+                a {
+                    padding: 5px;
+                    color: white;
+                    font-size: 20px;
+                }
+
+                a:hover,
+                a:focus,
+                a:active {
+                    text-decoration: none;
+                    font-size: 40px;
+                    color: #f5a562;
+                    transform: scale(1);
+                    transition: all .5s linear;
+                }
+
+            }
+        }
+
+        .sidebar {
+            grid-column: 11 / 13;
+            grid-row: 1 / 8;
+            font-size: 14px;
+            overflow: visible;
+
+            li {
+                list-style-type: none;
+                background-color: rgba(255, 255, 2555, .5);
+                margin-bottom: 9px;
+                padding: 6px;
+                height: 30px;
+                transition: all .5s linear;
+
+                &:hover {
+                    transform: translateX(-20px);
+                }
+
+            }
+        }
+    }
