--- a/zen-garden/zen-garden2/scss/partials/_variables.scss
+++ b/zen-garden/zen-garden2/scss/partials/_variables.scss
@@ -4,7 +4,7 @@ $secondary-bg: gray;
 $font-color: white;
 $alt-font-color: blue;
 $big-sun: yellow;
-$main-background: gray;
+$main-background: #041322;
 
 /*Star shape variables*/
 $star-color: white;
