changed breakpoint for main stuff

--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -227,7 +227,7 @@ body {
     }
 }
 
-    @include breakpoint(medium) {
+    @include breakpoint(small) {
         .page-wrapper {
             display: grid;
             grid-template-columns: repeat(12, 8.3333%);
