--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -227,7 +227,7 @@ body {
     }
 }
 
-    @include breakpoint(small) {
+    @media screen and (max-width:400px){
         .page-wrapper {
             display: grid;
             grid-template-columns: repeat(12, 8.3333%);
