--- a/zen-garden/zen-garden2/scss/style.css
+++ b/zen-garden/zen-garden2/scss/style.css
@@ -225,7 +225,7 @@ body {
       transform: scale(1);
       transition: all .5s linear; }
 
-@media (min-width: 40em) {
+@media screen and (max-width: 400px) {
   .page-wrapper {
     display: grid;
     grid-template-columns: repeat(12, 8.3333%);
