--- a/zen-garden/zen-garden2/scss/style.scss
+++ b/zen-garden/zen-garden2/scss/style.scss
@@ -7,13 +7,11 @@
 /* Typography */
 @import 'partials/typography';
 
-/* Mixins  */
+/* Mixins and Graphics (as mixins)  */
+@import 'partials/aliens';
 @import 'partials/mixins';
 @import 'partials/planets';
 @import 'partials/spaceship';
 
 /*layout */
 @import 'partials/layout';
-
-// graphics
-@import 'partials/aliens';
