Moblie View and code unduplicating
The mobile view now works up to 900px and the code which would be duplicated between breakpoints has been deleted.

--- a/zen-garden/zen-garden2/scss/partials/_breakpoints.scss
+++ b/zen-garden/zen-garden2/scss/partials/_breakpoints.scss
@@ -1,9 +1,4 @@
-$break-small: 20em;   //400px
-$break-medium: 46.8em;   //750px
-$break-large: 67.5em;  //1080px
-
+$break-1: 900px;
 @mixin breakpoint($break) {
-@if $break == small {
-@media screen and (max-width: $break-small) { @content; }
-}
+@media screen and (max-width: $break-1) { @content; }
 }
