--- a/zen-garden/zen-garden2/scss/partials/_typography.scss
+++ b/zen-garden/zen-garden2/scss/partials/_typography.scss
@@ -50,21 +50,21 @@ h3{
 }
 
 a:link {
-	font-weight: bold;
-	text-decoration: none;
-	color: darkgray;
-	}
+    font-weight: bold;
+    text-decoration: none;
+    color: blueviolet;
+    }
 a:visited {
-	font-weight: bold;
-	text-decoration: none;
-	color: #392758;
-	}
+    font-weight: bold;
+    text-decoration: none;
+    color: #392758;
+    }
 a:hover, a:focus, a:active {
   text-decoration: none;
   font-size: 20px;
-	color: #f5a562;
+    color: #f5a562;
   transform: scale(1);
-	}
+    }
 
 
 li{list-style-type: none;}
